--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <h2 class="car-header">Sedans</h2>
     <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
     or on your next road trip.</p>
-    <a href="#" class="learn-button">Learn More</a>
+    <a href="#" class="learn-button1">Learn More</a>
     </div>
 
     <div class="car-type2"> 
@@ -28,7 +28,7 @@
       <h2 class="car-header">SUVs</h2>
       <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
     and off-road adventures.</p>
-    <a href="#" class="learn-button">Learn More</a>
+    <a href="#" class="learn-button2">Learn More</a>
   </div>
 
     <div class="car-type3">
@@ -36,7 +36,7 @@
       <h2 class="car-header">Luxury</h2>
       <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
     rental and arrive in style.</p>
-    <a href="#" class="learn-button" type="button">Learn More</a>
+    <a href="#" class="learn-button3" type="button">Learn More</a>
   </div>
 
     
